feat(java): LTS 17・21・25と全JDKメーカーCIへ対応
配布JARをJava 17 bytecodeへ固定し、仮想スレッド等のJava 21専用APIをJava 17互換実装へ変更した。setup-java v5が公式対応する非推奨でない13ディストリビューションを17・21・25の39行列で検証し、リリース基準もTemurin 17へ統一した。ローカルTemurin 17・21・25の全テスト、同一JAR起動、Windowsランチャー、YAML構文、Bun/OSV監査を検証した。